# Tenchi-MCP

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  NOTICE.md  README.md  Tenchi-MCPアイデアログ.md  gemini-extension.json  models_config.toml  変数関数仕様書.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-19-tenchi-mcp.md
docs/superpowers/specs/: 2026-05-19-tenchi-mcp-design.md
src/: config.rs  lib.rs  main.rs  ollama.rs
tests/: config_test.rs
