[package]
name = "tenchi-mcp"
version = "0.1.8"
edition = "2021"
authors = ["YuzukoUnderson <rikuichi0212@gmail.com>"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
rust-mcp-sdk = "0.9"
async-trait = "0.1"
